tests/baselines/reference/es6ImportDefaultBinding.errors.txt
tests/cases/compiler/es6ImportDefaultBinding_0.ts(3,1): error TS1192: Deprecated syntax


==== tests/cases/compiler/es6ImportDefaultBinding_0.ts (1 errors) ====
    
    var a = 10;
    export = a;
    ~~~~~~~~~~~
!!! error TS1192: Deprecated syntax
    
==== tests/cases/compiler/es6ImportDefaultBinding_1.ts (0 errors) ====
    import defaultBinding from "es6ImportDefaultBinding_0";
    var x = defaultBinding;
    import defaultBinding2 from "es6ImportDefaultBinding_0"; // elide this import since defaultBinding2 is not used
    